tests/snapshots/system_query__system_query_info_found_installed_json.snap
---
source: tests/system_query.rs
expression: value
---
{
  "name": "ripgrep",
  "installed": true,
  "location": "packages/nix/cli.nix:5",
  "sources": [],
  "cache_hit": false,
  "elapsed_ms": 0,
  "hm_module": null,
  "darwin_service": null,
  "flakehub": []
}
