tests/snapshots/system_query__system_query_info_json_darwin_service_known_package.snap
---
source: tests/system_query.rs
expression: value
---
{
  "name": "yabai",
  "installed": false,
  "location": null,
  "sources": [],
  "hm_module": null,
  "darwin_service": {
    "path": "services.yabai",
    "example": "services.yabai.enable = true;",
    "enabled": false
  },
  "flakehub": []
}
