tests/snapshots/system_query__system_query_info_json_hm_module_known_package.snap
---
source: tests/system_query.rs
expression: value
---
{
  "name": "git",
  "installed": false,
  "location": null,
  "sources": [],
  "hm_module": {
    "path": "programs.git",
    "example": "programs.git.enable = true; programs.git.userName = \"...\";",
    "enabled": false
  },
  "darwin_service": null,
  "flakehub": []
}
