tests/snapshots/system_query__system_query_list_local_json_flag_renders_json.snap
---
source: tests/system_query.rs
expression: value
---
{
  "nxs": [
    "ripgrep",
    "fd",
    "lua5_4",
    "python3"
  ],
  "brews": [
    "htop"
  ],
  "casks": [
    "raycast"
  ],
  "mas": [
    "Xcode"
  ],
  "services": [
    "test-agent"
  ]
}
